refactor(auth): 重构权限认证逻辑
- 修改 CheckDeptVO 和 CheckRoleVO 的数据结构，使用 Map<Long, List<T>> 替代 List<T>
- 优化部门和角色认证逻辑，支持按租户分组返回结果
-增加级联禁用标识字段 cascadeDisable
- 调整 UserAggregatorController 中的测试接口，使用角色认证替代部门认证